@@ -4,7 +4,6 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
@@ -15,49 +14,32 @@ import java.util.List;
 public class CorsConfig implements WebMvcConfigurer {
 
     @Bean
-    public CorsFilter corsFilter() {
-        CorsConfiguration config =
-                new CorsConfiguration();
+public org.springframework.web.cors.CorsConfigurationSource corsConfigurationSource() {
 
-        config.setAllowCredentials(true);
+    CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOrigins(List.of(
-    "http://localhost:3000",
-    "http://localhost:3001",
-    "http://127.0.0.1:3000",
-    "https://crowd-sourced-civic-issues-reportin.vercel.app"
-));
+    config.setAllowCredentials(true);
 
-        config.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT",
-                "PATCH", "DELETE", "OPTIONS"
-        ));
+    config.setAllowedOrigins(List.of(
+            "http://localhost:3000",
+            "http://localhost:3001",
+            "http://127.0.0.1:3000",
+            "https://crowd-sourced-civic-issues-reportin.vercel.app"
+    ));
 
-        config.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "Accept",
-                "Origin",
-                "X-Requested-With",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers"
-        ));
+    config.setAllowedMethods(List.of(
+            "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
+    ));
 
-        config.setExposedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Disposition"
-        ));
+    config.setAllowedHeaders(List.of("*"));
 
-        config.setMaxAge(3600L);
+    UrlBasedCorsConfigurationSource source =
+            new UrlBasedCorsConfigurationSource();
 
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration(
-                "/**", config
-        );
+    source.registerCorsConfiguration("/**", config);
 
-        return new CorsFilter(source);
-    }
+    return source;
+}
 
     @Override
     public void addResourceHandlers(
